--- a/monitoring-service/Dockerfile
+++ b/monitoring-service/Dockerfile
@@ -2,9 +2,14 @@ FROM python:3.11
 
 WORKDIR /app
 
+# Copy dependency file
 COPY requirements.txt .
-RUN pip install -r requirements.txt
 
-COPY app.py .
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
+# Copy semua source code
+COPY . .
+
+# Jalankan FastAPI pakai port dari Railway
+CMD uvicorn app:app --host 0.0.0.0 --port $PORT
